--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Legal Solution</title>
     <script>
         tailwind.config = {
@@ -22,27 +22,61 @@
             extend: {
               colors: {
                 clifford: '#da373d',
-                'primary-color':'#B68C5A'
+                'primary-color':'#B68C5A',
+                'grey-color':'#707070'
               }
             }
           }
         }
       </script>
     <style>
-        .font-ebgatamond{
+        .font-eb-garamond{
             font-family: 'EB Garamond', serif;
         }
         .font-poppins{
             font-family: 'Poppins', sans-serif;
         }
+        
     </style>
 </head>
 <body>
-    <header>
-        <nav>
-            
-        </nav>
-
+    <header class="p-4">
+        <div class="container mx-auto mt-5 lg:mt-12 lg:max-w-[80%]">
+            <nav>
+                <div class="navbar">
+                    <div class="navbar-start">
+                      <img src="images/logo2.png" alt="">
+                    </div>
+                    <div class="navbar-center hidden lg:flex text-grey-color">
+                      <ul class="menu menu-horizontal px-1 text-lg">
+                          <li><a>Home <i class="ri-arrow-right-s-line"></i></a></li>
+                          <li><a>Services <i class="ri-arrow-right-s-line"></i></a></li>
+                          <li><a>Cases <i class="ri-arrow-right-s-line"></i></a></li>
+                          <li><a>Blog <i class="ri-arrow-right-s-line"></i></a></li>
+                          <li><a>Contact Us <i class="ri-arrow-right-s-line"></i></a></li>
+                      </ul>
+                    </div>
+                    <div class="navbar-end">
+                      <button class="btn bg-primary-color text-white font-semibold">Free Consultation</button>
+                    </div>
+                  </div>
+            </nav>
+        </div>
+        <!-- banner section -->
+        <div class="container mx-auto mt-12 lg:max-w-[80%] text-center">
+            <div class="bg-cover rounded-lg before:bg-gradient-to-r from-[#111] to-[#11111100] opacity-95" style="background-image: url(/images/banner.png)">
+                <div class="hero-content text-center">
+                  <div class="p-6 lg:py-20 lg:px-60 text-white font-eb-garamond">
+                    <h1 class="mb-5 text-2xl lg:text-6xl font-extrabold ">We Provide Effective Legal Solutions</h1>
+                    <p class="mb-5 text-[#E7E7E7] lg:w-[689px] mx-auto font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <div class="flex  justify-center gap-1 lg:gap-6 font-poppins">
+                        <input class="rounded-lg  lg:pr-48 lg:pl-5 py-4" type="text" placeholder="Search your services">
+                        <button class="p-3 lg:px-8 py-3 lg:text-lg font-semibold rounded-lg text-white bg-primary-color border-0">Search</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
     </header>
     <main>
 
