legal area section added

--- a/index.html
+++ b/index.html
@@ -79,7 +79,64 @@
         </div>
     </header>
     <main>
-
+        <!-- legal practice area section -->
+        <section class="my-24">
+            <div class="container mx-auto text-center md:max-w-[80%]">
+                <h3 class="font-eb-garamond text-4xl font-extrabold text-[#414040]">The Legal Practice Area</h3>
+                <p class="lg:w-[65%] mx-auto text-grey-color font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            
+            <div class="grid gap:0 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-16">
+                <div class="flex justify-center">
+                    <div class="lg:border-r lg:border-b border-[#E7E7E7] space-y-3 text-center p-4">
+                    <img class="mx-auto" src="images/business.png" alt="">
+                    <h4 class="text-[#414040] text-2xl font-extrabold font-eb-garamond">Business Law</h4>
+                    <p class="text-grey-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <img class="mx-auto" src="images/Frame.png" alt="">
+                    </div>
+                </div>
+                <div class="flex justify-center">
+                    <div class="lg:border-b lg:border-r border-[#E7E7E7] bg-gradient-to-r from-[#F3F3F3] to-[#f3f3f300] space-y-3 text-center p-4">
+                    <img class="mx-auto" src="images/criminal.png" alt="">
+                    <h4 class="text-[#414040] text-2xl font-extrabold font-eb-garamond">Business Law</h4>
+                    <p class="text-grey-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <img class="mx-auto" src="images/Frame.png" alt="">
+                    </div>
+                </div>
+                <div class="flex justify-center">
+                    <div class="lg:border-b border-[#E7E7E7] space-y-3 text-center p-4">
+                    <img class="mx-auto" src="images/child.png" alt="">
+                    <h4 class="text-[#414040] text-2xl font-extrabold font-eb-garamond">Business Law</h4>
+                    <p class="text-grey-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <img class="mx-auto" src="images/Frame.png" alt="">
+                    </div>
+                </div>
+                <div class="flex justify-center">
+                    <div class="lg:border-r border-[#E7E7E7] space-y-3 text-center p-4">
+                    <img class="mx-auto" src="images/education.png" alt="">
+                    <h4 class="text-[#414040] text-2xl font-extrabold font-eb-garamond">Business Law</h4>
+                    <p class="text-grey-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <img class="mx-auto" src="images/Frame.png" alt="">
+                    </div>
+                </div>
+                <div class="flex justify-center">
+                    <div class="lg:border-r border-[#E7E7E7] space-y-3 text-center p-4">
+                    <img class="mx-auto" src="images/divorce.png" alt="">
+                    <h4 class="text-[#414040] text-2xl font-extrabold font-eb-garamond">Business Law</h4>
+                    <p class="text-grey-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <img class="mx-auto" src="images/Frame.png" alt="">
+                    </div>
+                </div>
+                <div class="flex justify-center">
+                    <div class="border-[#E7E7E7] space-y-3 text-center p-4">
+                    <img class="mx-auto" src="images/tax.png" alt="">
+                    <h4 class="text-[#414040] text-2xl font-extrabold font-eb-garamond">Business Law</h4>
+                    <p class="text-grey-color font-poppins">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <img class="mx-auto" src="images/Frame.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
     </main>
     <footer>
 
