added what client says section

--- a/index.html
+++ b/index.html
@@ -137,6 +137,56 @@
             </div>
         </div>
         </section>
+        <!-- Client says section -->
+        <section>
+          <div class="container w-[80%] mx-auto">
+            <div class="mx-auto text-center">
+              <h3 class="font-eb-garamond text-4xl font-extrabold text-[#414040]">What Our Client Say</h3>
+              <p class="lg:w-[65%] mx-auto text-grey-color font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            </div>
+            <div class="carousel w-full h-[500px] rounded-lg mt-16">
+              <div id="slide1" class="carousel-item relative w-full \">
+                <img src="images/slider-1.jpg" class="w-full h-auto object-cover" />
+                <div class="absolute w-full lg:w-[900px] text-white text-center top-10 lg:mx-24 lg:top-28">
+                  <img class="rounded-full mx-auto" src="images/Ellipse 1.jpg" alt="">
+                  <h4 class="md:mt-6 font-eb-garamond text-lg md:text-2xl font-extrabold">Awlad Hossain</h4>
+                  <h5 class="font-poppins">UIX Designer</h5>
+                  <p class="mt-10 md:mt-14 font-poppins text-[#f3f3f3]">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                  <a href="#slide4" class="btn btn-circle bg-transparent text-white border-0">❮</a> 
+                  <a href="#slide2" class="btn btn-circle bg-transparent text-white border-0">❯</a>
+                </div>
+              </div> 
+              <div id="slide2" class="carousel-item relative w-full">
+                <img src="/images/slider-2.jpg" class="w-full" />
+                <div class="absolute w-[900px] text-white text-center mx-24 top-28">
+                  <img class="rounded-full mx-auto" src="images/Ellipse 1.jpg" alt="">
+                  <h4 class="mt-6 font-eb-garamond text-2xl font-extrabold">Awlad Hossain</h4>
+                  <h5 class="font-poppins">UIX Designer</h5>
+                  <p class="mt-14 font-poppins text-[#f3f3f3]">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                  <a href="#slide1" class="btn btn-circle bg-transparent text-white border-0">❮</a> 
+                  <a href="#slide3" class="btn btn-circle bg-transparent text-white border-0">❯</a>
+                </div>
+              </div> 
+              <div id="slide3" class="carousel-item relative w-full">
+                <img src="/images/slider-3.jpg" class="w-full" />
+                <div class="absolute w-[900px] text-white text-center mx-24 top-28">
+                  <img class="rounded-full mx-auto" src="images/Ellipse 1.jpg" alt="">
+                  <h4 class="mt-6 font-eb-garamond text-2xl font-extrabold">Awlad Hossain</h4>
+                  <h5 class="font-poppins">UIX Designer</h5>
+                  <p class="mt-14 font-poppins text-[#f3f3f3]">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                  <a href="#slide2" class="btn btn-circle bg-transparent text-white border-0">❮</a> 
+                  <a href="#slide1" class="btn btn-circle bg-transparent text-white border-0">❯</a>
+                </div>
+              </div> 
+            </div>
+          </div>
+        </section>
     </main>
     <footer>
 
