faq section done

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
         </section>
         <!-- Client says section -->
-        <section>
+        <section class="my-24">
           <div class="container w-[80%] mx-auto">
             <div class="mx-auto text-center">
               <h3 class="font-eb-garamond text-4xl font-extrabold text-[#414040]">What Our Client Say</h3>
@@ -184,6 +184,58 @@
                   <a href="#slide1" class="btn btn-circle bg-transparent text-white border-0">❯</a>
                 </div>
               </div> 
+            </div>
+          </div>
+        </section>
+        <!-- faq section -->
+        <section class="my-24">
+          <div class="container w-[80%] mx-auto">
+            <div class="mx-auto text-center mb-16">
+              <h3 class="font-eb-garamond text-4xl font-extrabold text-[#414040]">Frequently Asked Any Questions</h3>
+              <p class="lg:w-[65%] mx-auto text-grey-color font-poppins mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            </div>
+            <div class="flex flex-col-reverse md:flex-col justify-between">
+              <div class="flex-1">
+                <div class="collapse collapse-plus bg-base-200 mb-7">
+                  <input type="radio" name="my-accordion-3" checked="checked" /> 
+                  <div class="collapse-title lg:text-xl font-medium lg:h-[100px] lg:p-9 lg:pr-28">
+                    Are application fee waivers available?
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour. </p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200 mb-7">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title lg:text-xl font-medium  lg:h-[100px] lg:p-9 lg:pr-28">
+                    Are application fee waivers available?
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour. </p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200 mb-7">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title lg:text-xl font-medium  lg::h-[100px] lg::p-9 lg:pr-28">
+                    Are application fee waivers available?
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour. </p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title lg:text-xl font-medium  lg:h-[100px] lg:p-9 md:pr-28">
+                    Are application fee waivers available?
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour. </p>
+                  </div>
+                </div>
+              </div>
+              <div class="flex-1 mb-3 md:h-auto">
+                <img src="images/faq.png" alt="">
+              </div>
             </div>
           </div>
         </section>
